--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,9 @@ dependencies {
 	compile group: 'org.webjars', name: 'materializecss', version: '1.0.0'
 	// https://mvnrepository.com/artifact/org.webjars/jquery
 	compile group: 'org.webjars', name: 'jquery', version: '3.3.1-1'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.1.RELEASE'
+	// https://mvnrepository.com/artifact/org.webjars/webjars-locator-core
+	compile group: 'org.webjars', name: 'webjars-locator-core', version: '0.36'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
