--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -1,10 +1,11 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springmvc4?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=GMT
+    url: jdbc:mysql://localhost:3306/springmvc4?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
     username: root
     password: 123456
   jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: update
     show-sql: true
